Wed Jan 17 08:48:30 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalTransport.cc (Request): Oops, fixed a holdover from
	code borrowed from ExternalParser.cc's fork handling.

Mon Jan 15 23:09:37 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htnet/Connection.cc: Back out previous change--this should not
	in any way be needed since the configure script should set
	FD_SET_T.

	* configure.in, configure: Add more lenient prototyping for
	select() test--now allows "const struct timeval" for compilation
	on BSDI.

	* htdoc/RELEASE.html: Update with Gilles's changes.

	* htdoc/cf_blocks.html: New file describing <server ...></server>
	and <url ...></url> blocks.

	* htdoc/cf_general.html, htdoc/confmenu.html: Refer to the above.
	
Mon Jan 15 17:46:07 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/TemplateList.cc (createFromString), htcommon/defaults.cc:
	Treat template_map as a _quoted_ string list.

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.

Mon Jan 15 17:40:45 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/hts_templates.html: Add METADESCRIPTION variable.

	* htsearch/Display.cc (displayMatch): Add METADESCRIPTION variable.

	* htdig/ExternalParser.cc (parse): Fix up handling of arguments.

	* htdig/ExternalTransport.cc (Request): Fix up handling of fork/exec
	and command arguments, add wait() call.

Wed Jan 10 19:23:36 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/rundig: Fix -a handling to move db.words.db.work_weakcmpr
	into place if it exists

Sat Jan  6 21:50:58 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Add checks for <sys/wait.h> and <wait.h> for
	ExternalParser.

	* include/htconfig.h.in: Regenerate using autoheader.

	* configure: Regenerate using configure.
	
	* htnet/Connection.cc: Add definition for FD_SET_T to fix problems
	compiling on BSDI mentioned by Joe.

	* htdig/ExternalParser.cc: Use <sys/wait.h> or <wait.h> as